added messages centred routes and verification otp routes

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://yashkd12790:yash12790@cluster0.hhvju.mongodb.net
-RESEND_API_KEY="re_JpeppxuR_GmeGmYEmuQETi1dKDfUJFzTq"
+MONGODB_URI= mongodb+srv://yashkd12790:yash12790@cluster0.hhvju.mongodb.net
+RESEND_API_KEY=re_JpeppxuR_GmeGmYEmuQETi1dKDfUJFzTq
 NEXT_AUTH_SECRET=mysecret
