--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.21",
+    "@ai-sdk/google-vertex": "^0.0.9",
+    "@google/generative-ai": "^0.12.0",
+    "@hookform/resolvers": "^3.6.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-email/components": "^0.0.19",
     "ai": "^3.1.36",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.395.0",
     "mongoose": "^8.4.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
@@ -19,7 +28,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.4",
+    "react-hook-form": "^7.52.0",
     "resend": "^3.3.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
