--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@ai-sdk/google-vertex": "^0.0.9",
     "@google/generative-ai": "^0.12.0",
     "@hookform/resolvers": "^3.6.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@react-email/components": "^0.0.19",
     "ai": "^3.1.36",
