--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email": "email dev"
   },
   "dependencies": {
     "@ai-sdk/google": "^0.0.21",
@@ -29,7 +30,7 @@
     "embla-carousel-react": "^8.1.5",
     "lucide-react": "^0.395.0",
     "mongoose": "^8.4.1",
-    "next": "14.2.3",
+    "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "openai": "^4.51.0",
     "react": "^18",
