--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.1.5",
     "embla-carousel-react": "^8.1.5",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.395.0",
     "mongoose": "^8.4.1",
     "next": "^14.2.5",
